# palautusrepositorio

./: pyproject.toml  retro.md
viikko1/: .pylintrc
viikko2/nhl-reader/: palautusrepositorio.code-workspace  pyproject.toml
viikko2/nhl-reader/src/: PlayerReader.py  PlayerStats  index.py  player.py
viikko2/poetry-web/: palautusrepositorio.code-workspace  pyproject.toml
viikko2/poetry-web/src/: index.py
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/hello-robot/src/: CounterLibrary.py
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/tests/: home.robot  login.robot  resource.robot
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko6/: README.md
viikko6/query-language/src/: index.py  matchers.py
