[tool.poetry]
name = "ohtu"
version = "0.1.0"
description = ""
authors = [" Maija Rislakki < maija.rislakki@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
