[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = [" Maija Rislakki < maija.rislakki@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
